--- a/changelog
+++ b/changelog
@@ -1,3 +1,23 @@
+turnkey-etherpad-12.1 (1) turnkey; urgency=low
+
+  * Etherpad:
+
+    - Latest version of Etherpad will be installed at build time via git.
+    - Changed path to /opt/etherpad-lite (inline with git project name).
+    - Dependencies will be installed via included installDeps.sh script.
+
+  * NodeJS related:
+
+    - Latest version of node will be installed at build time, with a source
+      symlink created at /usr/local/src/node.
+    - Node binaries added to path via symlinking in /usr/local/bin.
+    - Latest NPM module versions installed at build time.
+
+  * Note: Please refer to turnkey-core's changelog for changes common to all
+    appliances. Here we only describe changes specific to this appliance.
+
+ -- Alon Swartz <alon@turnkeylinux.org>  Sun, 07 Apr 2013 08:00:00 +0200
+
 turnkey-etherpad-12.0 (1) turnkey; urgency=low
 
   * Initial public release of TurnKey Etherpad.
