--- a/changelog
+++ b/changelog
@@ -1,12 +1,14 @@
 turnkey-etherpad-13.0 (1) turnkey; urgency=low
 
-  * Please refer to turnkey-core's changelog for changes common to all
-    appliances, as well as the following git logs:
-    
-    - https://github.com/turnkeylinux/common
-    - https://github.com/turnkeylinux-apps/etherpad
+  * Etherpad:
 
- -- Alon Swartz <alon@turnkeylinux.org>  Tue, 06 Aug 2013 15:37:33 +0300
+    - Latest upstream versions of Etherpad and NodeJS.
+    - Bugfix: create src/.ep_initialized [#44].
+
+  * Note: Please refer to turnkey-core's changelog for changes common to all
+    appliances. Here we only describe changes specific to this appliance.
+
+ -- Alon Swartz <alon@turnkeylinux.org>  Thu, 10 Oct 2013 17:51:16 +0300
 
 turnkey-etherpad-12.1 (1) turnkey; urgency=low
 
