--- a/changelog
+++ b/changelog
@@ -1,3 +1,15 @@
+turnkey-etherpad-14.0 (1) turnkey; urgency=low
+
+  * Etherpad:
+
+    - Latest upstream versions of Etherpad and NodeJS.
+    - Generate/update SESSIONKEY in addition to APIKEY automatically.
+
+  * Note: Please refer to turnkey-core's changelog for changes common to all
+    appliances. Here we only describe changes specific to this appliance.
+
+ -- Anton Pyrogovskyi <q@dae.pp.ua>  Sun, 17 May 2015 09:18:07 +0300
+
 turnkey-etherpad-13.0 (1) turnkey; urgency=low
 
   * Etherpad:
