--- a/changelog
+++ b/changelog
@@ -1,3 +1,15 @@
+turnkey-etherpad-14.1 (1) turnkey; urgency=low
+
+  * Etherpad:
+
+    - Latest upstream version of Etherpad.
+    - Now uses common tools to manage NodeJS (n, pm2 etc).
+
+  * Note: Please refer to turnkey-core's changelog for changes common to all
+    appliances. Here we only describe changes specific to this appliance.
+
+ -- Anton Pyrogovskyi <anton@turnkeylinux.org>  Sun, 15 Jan 2016 12:04:16 +0100
+
 turnkey-etherpad-14.0 (1) turnkey; urgency=low
 
   * Etherpad:
