--- a/changelog
+++ b/changelog
@@ -5,7 +5,7 @@ turnkey-etherpad-15.0 (1) turnkey; urgency=low
   * Replace MySQL with MariaDB
 
   * Note: Please refer to turnkey-core's changelog for changes common to all
-    appliances. Here we only describe changes specdific to this appliance.
+    appliances. Here we only describe changes specific to this appliance.
 
  -- Vlad Kuzmenko <vlad.work.here@gmail.com>  Sat, 20 Jan 2017 07:45:42 +0200
 
