--- a/changelog
+++ b/changelog
@@ -1,13 +1,28 @@
 turnkey-etherpad-15.0 (1) turnkey; urgency=low
 
-  * Install Adminer directly from stretch/main repo
+  * Install latest stable etherpad-lite from upstream source code via Git clone
+    from master branch - currently provides v1.7.
 
-  * Replace MySQL with MariaDB
+  * Re-enable admin interface by default (disabled in v14.2 due to security
+    concerns).
+
+  * Pre-install ep_hash_auth plugin (hashes user passwords) including
+    dependencies - closes #874.
+
+  * Updated TurnKey config file (settings.json) to be a closer match to
+    default upstream (although removed lots of comments, consolidated
+    somewhat and reordered).
+
+  * Add (modified) inithooks back in to set (hashed) admin password.
+
+  * Provides NodeJS v8.12.0.
+
+  * Replace MySQL with MariaDB.
 
   * Note: Please refer to turnkey-core's changelog for changes common to all
     appliances. Here we only describe changes specific to this appliance.
 
- -- Vlad Kuzmenko <vlad.work.here@gmail.com>  Sat, 20 Jan 2017 07:45:42 +0200
+ -- Jeremy Davis <jeremy@turnkeylinux.org>  Fri, 05 Oct 2018 17:33:21 +1000
 
 turnkey-etherpad-14.2 (1) turnkey; urgency=low
 
