--- a/changelog
+++ b/changelog
@@ -1,9 +1,24 @@
+turnkey-etherpad-16.1 (1) turnkey; urgency=low
+
+  * Install latest stable etherpad-lite from upstream source code via git
+    clone of tag - currently provides v1.8.13.
+
+  * Include latest version of relevant plugins.
+
+  * Includes NodeJS v14.16.1 (installed via TurnKey common NodeJS install
+    script).
+
+  * Note: Please refer to turnkey-core's 16.1 changelog for changes common to
+    all appliances. Here we only describe changes specific to this appliance.
+
+ -- Jeremy Davis <jeremy@turnkeylinux.org>  Fri, 09 Apr 2021 15:35:10 +1000
+
 turnkey-etherpad-16.0 (1) turnkey; urgency=low
 
   * First Etherpad release since v14.2!
 
   * Install latest stable etherpad-lite from upstream source code via git
-   clone from master branch - currently provides v1.8.6.
+    clone from master branch - currently provides v1.8.6.
 
   * Re-enable admin interface by default (disabled in v14.2 due to security
     concerns).
