--- a/changelog
+++ b/changelog
@@ -1,7 +1,12 @@
 turnkey-openldap-17.0 (1) turnkey; urgency=low
 
-  * Updating etherpad and dependencies to tkldev v27.0
+  * Updating etherpad and dependencies to tkldev v17.0.
   
+  * Changing outdated bcrypt package to argon2 for hashing mechanism.
+  
+  * Updating dialog wrapper to refactored version for v17.0.
+  
+  * Removing never ending loop in etherpad code.
 
   * Note: Please refer to turnkey-core's 16.1 changelog for changes common to
     all appliances. Here we only describe changes specific to this appliance.
