--- a/changelog
+++ b/changelog
@@ -1,17 +1,15 @@
-turnkey-openldap-17.0 (1) turnkey; urgency=low
+turnkey-etherpad-turnkey-openldap-17.1 (1) turnkey; urgency=low
 
-  * Updating etherpad and dependencies to tkldev v17.0.
-  
-  * Changing outdated bcrypt package to argon2 for hashing mechanism.
-  
-  * Updating dialog wrapper to refactored version for v17.0.
-  
-  * Removing never ending loop in etherpad code.
+  * Updating etherpad and dependencies to tkldev v17
+ 
+  * Updated bcrypt package to argon2 for hashing mechanism.
 
-  * Note: Please refer to turnkey-core's 16.1 changelog for changes common to
-    all appliances. Here we only describe changes specific to this appliance.
+  * Updating dialog_wrapper to refactored version for v17
 
- -- Mattie Darden <mattie@turnkeylinux.org>  Fri, 26 Aug 2022 19:13:38 -0400
+  * Removing never ending loop in etherpad code while still ensuring etherpad instance starts cleanly.
+
+ -- Mattie Darden <mattie@turnkeylinunx.org>  Fri, 02 Sep 2022 01:14:39 +0000
+
 turnkey-etherpad-16.1 (1) turnkey; urgency=low
 
   * Install latest stable etherpad-lite from upstream source code via git
@@ -182,4 +180,3 @@ turnkey-etherpad-12.0 (1) turnkey; urgency=low
     appliances. Here we only describe changes specific to this appliance.
 
  -- Alon Swartz <alon@turnkeylinux.org>  Wed, 01 Aug 2012 08:00:00 +0200
-
