--- a/changelog
+++ b/changelog
@@ -1,3 +1,13 @@
+turnkey-etherpad-18.0 (1) turnkey; urgency=low
+
+  * Updated Etherpad to v1.9.6 and Node to latest LTS version (currently
+    v20.11.0).
+
+  * Note: Please refer to turnkey-core's 18.0 changelog for changes common to
+    all appliances. Here we only describe changes specific to this appliance.
+
+ -- Anton Pyrogovskyi <anton@turnkeylinux.org>  Wed, 24 Jan 2024 20:02:19 +0100
+
 turnkey-etherpad-17.1 (1) turnkey; urgency=low
 
   * Updated all Debian packages to latest.
